# rs-suno

./: .gitattributes  .gitignore  .mise.toml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  codecov.yml  deny.toml  release-please-config.json
.github/copilot/: settings.json
.github/workflows/: api-docs.yml  ci.yml  copilot-auto-merge.yml  copilot-setup-steps.yml  coverage.yml  docs.yml  macos.yml  release-please.yml  release.yml  supply-chain.yml
crates/rs-suno/: Cargo.toml  build.rs
crates/rs-suno/src/: clock.rs  diskspace.rs  download.rs  ffmpeg.rs  fs.rs  http.rs  main.rs  scratch.rs  transcode.rs
crates/rs-suno/src/cli/: account.rs  areas.rs  args.rs  config_load.rs  desired.rs  execute.rs  expiry.rs  failure.rs  identity.rs  last_run.rs  logs.rs  mod.rs  open_url.rs  output.rs  prompt.rs  run.rs  signal.rs  stems.rs  synced_lyrics.rs  task_output.rs  token.rs  token_cmd.rs  wallclock.rs
crates/rs-suno/src/cli/commands/: auth.rs  completions.rs  config.rs  doctor.rs  fetch.rs  ls.rs  mod.rs  version.rs
crates/rs-suno/src/cli/run/: assemble.rs  preflight.rs  tail.rs
crates/suno-cli/: Cargo.toml
crates/suno-cli/src/: clock.rs  download.rs  ffmpeg.rs  fs.rs  http.rs  main.rs  transcode.rs
crates/suno-cli/src/cli/: args.rs  desired.rs  logs.rs  output.rs  run.rs
crates/suno-cli/src/cli/commands/: auth.rs  config.rs  fetch.rs  ls.rs  mod.rs
crates/suno-core/: Cargo.toml
crates/suno-core/src/: album_art.rs  area.rs  auth.rs  backoff.rs  civil.rs  client.rs  clock.rs  config.rs  consts.rs  desired.rs  downloadable.rs  error.rs  executor.rs  extras.rs  ffmpeg.rs  fs.rs  graph.rs  hash.rs  http.rs  identity.rs  lib.rs  limiter.rs  lineage.rs  lyrics.rs  manifest.rs  model.rs  naming.rs  orphans.rs  pathkey.rs  reconcile.rs  roots.rs  select.rs  sync_chaos.rs  synced.rs  tag.rs  tag_alac.rs  testutil.rs  textfmt.rs  tracks.rs  vocab.rs  (+1 more)
crates/suno-core/src/client/: tests.rs
crates/suno-core/src/client/tests/: billing_lyrics.rs  clips.rs  feed.rs  lineage.rs  playlists.rs  request.rs  stems.rs
crates/suno-core/src/config/: effective.rs  fixtures.rs  resolve.rs  schema.rs  shape.rs
crates/suno-core/src/config/resolve/: tests.rs
crates/suno-core/src/config/resolve/tests/: precedence.rs  toggles.rs  token.rs
crates/suno-core/src/desired/: tests.rs
crates/suno-core/src/desired/tests/: album.rs  build.rs  playlist.rs  sidecars.rs
crates/suno-core/src/executor/: artifact.rs  audio.rs  classify.rs  cover.rs  lifecycle.rs  mod.rs  stem.rs  tag.rs  tests.rs
crates/suno-core/src/executor/tests/: actions.rs  album_art.rs  artifacts.rs  audio.rs  audio_cover.rs  audio_format.rs  concurrency.rs  failures.rs  stems.rs
crates/suno-core/src/extras/: tests.rs
crates/suno-core/src/graph/: node.rs  store.rs  tests.rs
crates/suno-core/src/graph/tests/: albums.rs  collision.rs  context.rs  shape.rs  update.rs
crates/suno-core/src/lineage/: tests.rs
crates/suno-core/src/lyrics/: aligned.rs  mod.rs  render.rs
crates/suno-core/src/naming/: proptests.rs  tests.rs
crates/suno-core/src/reconcile/: album.rs  mod.rs  playlist.rs  proptests.rs  tests.rs  types.rs
crates/suno-core/src/reconcile/tests/: album_art.rs  artifacts.rs  clobber.rs  deletion.rs  gates.rs  plan.rs  playlist.rs  relocation.rs  stems.rs
crates/suno-core/src/roots/: tests.rs
crates/suno-core/src/sync_chaos/: faults.rs  full_sync.rs  fuzz.rs  harness.rs  stateful.rs
crates/suno-core/src/tag/: tests.rs
crates/suno-core/src/tracks/: tests.rs
crates/suno-core/src/wire/: billing.rs  clip.rs  feed.rs  lyrics.rs  playlist.rs  stem.rs  wav.rs
docs/: book.toml  cli-ux.md  cloud-agents.md
docs/src/: SUMMARY.md  artwork-and-animated-covers.md  authentication.md  commands-reference.md  config.schema.json  configuration.md  containers.md  installation-and-ffmpeg.md  introduction.md  lineage-and-albums.md  playlists.md  scheduling-and-exit-codes.md  sync-copy-and-deletion-safety.md  troubleshooting-and-faq.md
docs/theme/: auth-picker.css  auth-picker.js
target-agent/: .rustc_info.json
target-agent/debug/.fingerprint/adler2-b24264b98c9c24ee/: lib-adler2
target-agent/debug/.fingerprint/adler2-d64796fd220130f0/: lib-adler2.json
target-agent/debug/.fingerprint/anstream-674a392c59bbefd6/: lib-anstream  lib-anstream.json
target-agent/debug/.fingerprint/anstream-997796ebd02d8e53/: lib-anstream
target-agent/debug/.fingerprint/anstyle-parse-79ae66092d929e4f/: lib-anstyle_parse  lib-anstyle_parse.json
target-agent/debug/.fingerprint/anstyle-query-4b004870b27b5556/: lib-anstyle_query.json
target-agent/debug/.fingerprint/anstyle-query-d085cb353a7796a6/: lib-anstyle_query.json
target-agent/debug/.fingerprint/anyhow-2eb56930bce3e695/: lib-anyhow
target-agent/debug/.fingerprint/anyhow-cab837fa21724a92/: run-build-script-build-script-build
target-agent/debug/.fingerprint/atomic-waker-8712aa78b84f4ead/: lib-atomic_waker  lib-atomic_waker.json
target-agent/debug/.fingerprint/aws-lc-rs-0e35eba21b37140a/: lib-aws_lc_rs  lib-aws_lc_rs.json
target-agent/debug/.fingerprint/aws-lc-rs-219ea64d4046f877/: lib-aws_lc_rs  lib-aws_lc_rs.json
target-agent/debug/.fingerprint/aws-lc-rs-21e239ed276f2570/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agent/debug/.fingerprint/aws-lc-rs-4d49752d575be214/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agent/debug/.fingerprint/aws-lc-sys-0a6dd9f276409fa8/: run-build-script-build-script-main  run-build-script-build-script-main.json
target-agent/debug/.fingerprint/aws-lc-sys-27afc1a058a0a563/: run-build-script-build-script-main  run-build-script-build-script-main.json
target-agent/debug/.fingerprint/aws-lc-sys-49951c3e32dc6326/: lib-aws_lc_sys  lib-aws_lc_sys.json
target-agent/debug/.fingerprint/aws-lc-sys-4a65531298e98c62/: lib-aws_lc_sys  lib-aws_lc_sys.json
target-agent/debug/.fingerprint/aws-lc-sys-6b7fb51472e361e8/: build-script-build-script-main
target-copilot/: .rustc_info.json
target-copilot/debug/: suno.d
(+719 files in other folders)
