[workspace]
resolver = "3"
members = ["crates/suno-core", "crates/rs-suno"]

[workspace.package]
version = "0.36.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/teh-hippo/rs-suno"

# Whole-program optimisation for the shipped binary: fat LTO with a single
# codegen unit lets the linker inline and drop unreachable code across crates,
# and stripping removes symbols. Trims the release binary substantially with no
# behavioural change (tests run on the dev profile, so they are unaffected).
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true

# The workflow is fully agentic (no interactive debuggers), but panic and test
# backtraces still need file:line to locate failures. "line-tables-only" keeps
# that while dropping the heavier variable/type debug info the linker would
# otherwise process on every relink, cutting compile/link time and target size.
[profile.dev]
debug = "line-tables-only"
