[package]
name = "rs-suno"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://teh-hippo.github.io/rs-suno/"
description = "A download-only command-line tool for mirroring your Suno.ai library."
keywords = ["suno", "music", "download", "cli", "sync"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "../../README.md"

[[bin]]
name = "suno"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
suno-core = { version = "0.36.13", path = "../suno-core" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
