[package]
name = "suno-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "suno"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
suno-core = { version = "0.1.0", path = "../suno-core" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
