[package]
name = "suno-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
id3 = "1"
metaflac = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
pollster = "0.4.0"
